--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proffy</title>
 
-    <link rel="stylesheet" href="/styles/main.css">
-    <link rel="stylesheet" href="/styles/partials/page-landing.css">
+    <link rel="stylesheet" href="/NLW/styles/main.css">
+    <link rel="stylesheet" href="/NLW/styles/partials/page-landing.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
 
@@ -15,26 +15,26 @@
 
     <div id="container">
         <div class="logo-container">
-            <img src="/images/images/logo.svg" alt="Proffy">
+            <img src="/NLW/images/images/logo.svg" alt="Proffy">
             <h2>Sua plataforma de estudos online</h2>
         </div>
 
-        <img class="hero-image" src="/images/images/landing.svg" alt="Plataforma de estudos">
+        <img class="hero-image" src="/NLW/images/images/landing.svg" alt="Plataforma de estudos">
 
         <div class="buttons-container">
             <a class="study" href="/study.html">
-                <img src="/images/images/icons/study.svg" alt="Estudar">
+                <img src="/NLW/images/images/icons/study.svg" alt="Estudar">
                 Estudar
             </a>
             <a class="give-classes" href="/give-classes.html">
-                <img src="/images/images/icons/give-classes.svg" alt="Dar Aulas">
+                <img src="/NLW/images/images/icons/give-classes.svg" alt="Dar Aulas">
                 Dar aulas
             </a>
         </div>
 
         <p class="total-connections">
             Total de 666 conexões já realizadas
-            <img src="/images/images/icons/purple-heart.svg" alt="Coração roxo">
+            <img src="/NLW/images/images/icons/purple-heart.svg" alt="Coração roxo">
         </p>
 
     </div>
