--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <img class="hero-image" src="/NLW/images/images/landing.svg" alt="Plataforma de estudos">
 
         <div class="buttons-container">
-            <a class="study" href="/study.html">
+            <a class="study" href="/NLW/study.html">
                 <img src="/NLW/images/images/icons/study.svg" alt="Estudar">
                 Estudar
             </a>
