Reorganizaçao dos arquivos

--- a/study.html
+++ b/study.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proffy</title>
 
-    <link rel="stylesheet" href="/NLW/styles/main.css">
-    <link rel="stylesheet" href="/NLW/styles/partials/page-study.css">
+    <link rel="stylesheet" href="/NLW2/styles/main.css">
+    <link rel="stylesheet" href="/NLW2/styles/partials/header.css">
+    <link rel="stylesheet" href="/NLW2/styles/partials/page-study.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
 
@@ -16,10 +17,10 @@
     <div id="container">
         <header class="page-header">
             <div class="top-bar-container">
-                <a href="/">
-                    <img src="/NLW/images/images/icons/back.svg" alt="Voltar">
+                <a href="/NLW2/index.html">
+                    <img src="/NLW2/images/images/icons/back.svg" alt="Voltar">
                 </a>
-                <img src="/NLW/images/images/logo.svg" alt="Proffy">
+                <img src="/NLW2/images/images/logo.svg" alt="Proffy">
             </div>
             <div class="header-content">
                 <strong>Esses são os proffys disponíveis</strong>
@@ -79,7 +80,7 @@
                 <footer>
                     <p>Preço/hora <strong>R$ 20,00</strong></p>
                     <button type="button">
-                        <img src="/NLW/images/images/icons/whatsapp.svg" alt="whatsapp">Entrar em contato
+                        <img src="/NLW2/images/images/icons/whatsapp.svg" alt="whatsapp">Entrar em contato
                     </button>
                 </footer>
             </article>
@@ -101,7 +102,7 @@
                 <footer>
                     <p>Preço/hora <strong>R$ 20,00</strong></p>
                     <button type="button">
-                        <img src="/NLW/images/images/icons/whatsapp.svg" alt="whatsapp">Entrar em contato
+                        <img src="/NLW2/images/images/icons/whatsapp.svg" alt="whatsapp">Entrar em contato
                     </button>
                 </footer>
             </article>
